--- a/packages/plugins/@nocobase/plugin-async-task-manager/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-async-task-manager/src/locale/nl-NL.json
@@ -1,5 +1,5 @@
 {
-    "Export {collection} attachments": "{collection} attachments export",
-    "Export {collection} data": "{collection} data export",
-    "Import {collection} data": "{collection} data import"
+    "Export {collection} attachments": "Exporteer {collection} bijlages",
+    "Export {collection} data": "Exporteer {collection} data",
+    "Import {collection} data": "Importeer {collection} data"
 }
