--- a/packages/plugins/@nocobase/plugin-auth-sms/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-auth-sms/src/locale/nl-NL.json
@@ -1,6 +1,6 @@
 {
-    "Sign in via SMS": "Sign in via SMS",
-    "User will be registered automatically if not exists.": "User will be registered automatically if not exists.",
-    "Sign up automatically when the user does not exist": "Sign up automatically when the user does not exist",
+    "Sign in via SMS": "Inloggen via SMS",
+    "User will be registered automatically if not exists.": "Als de gebruiker nog niet bestaat, wordt deze automatisch geregistreerd.",
+    "Sign up automatically when the user does not exist": "Automatisch aanmelden wanneer de gebruiker niet bestaat",
     "SMS": "SMS"
 }
