--- a/packages/plugins/@nocobase/plugin-data-visualization/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-data-visualization/src/locale/nl-NL.json
@@ -5,97 +5,97 @@
     "Submit": "Indienen",
     "Actions": "Acties",
     "Title": "Titel",
-    "Enable": "Enable",
-    "Chart": "Chart",
-    "ChartV2": "ChartV2",
-    "Charts": "Charts",
+    "Enable": "Inschakelen",
+    "Chart": "Grafiek",
+    "ChartV2": "GrafiekV2",
+    "Charts": "Grafieken",
     "Configure": "Configureren",
     "Duplicate": "Dupliceren",
-    "Configure chart": "Configure chart",
-    "Transform": "Transform",
+    "Configure chart": "Configureer grafiek",
+    "Transform": "Transformeer",
     "Chart type": "Grafiektype",
-    "JSON config": "JSON config",
+    "JSON config": "JSON configuratie",
     "Query": "Query",
     "Data": "Data",
-    "Run query": "Run query",
-    "Measures": "Measures",
-    "Dimensions": "Dimensions",
+    "Run query": "Query uitvoeren",
+    "Measures": "Afmetingen",
+    "Dimensions": "Dimensies",
     "Filter": "Filter",
     "Sort": "Sorteren",
-    "Limit": "Limit",
+    "Limit": "Limiet",
     "Offset": "Offset",
-    "Enable cache": "Enable cache",
-    "TTL (second)": "TTL (second)",
-    "Field": "Veld",
-    "Aggregation": "Aggregation",
+    "Enable cache": "Cache inschakelen",
+    "TTL (second)": "TTL (seconde)",
+    "veld": "Veld",
+    "Aggregation": "Aggregatie",
     "Alias": "Alias",
     "Format": "Formaat",
-    "The first 10 records of the query result:": "The first 10 records of the query result:",
-    "Please run query to retrive data.": "Please run query to retrive data.",
+    "The first 10 records of the query result:": "De eerste 10 records van het queryresultaat:",
+    "Please run query to retrive data.": "Voer query uit om gegevens op te halen.",
     "Type": "Type",
-    "Add field": "Voeg veld toe",
-    "Add chart": "Add chart",
-    "xField": "X field",
-    "yField": "Y field",
-    "seriesField": "Series field",
-    "angleField": "Angle field",
-    "colorField": "Color field",
-    "Line": "Line",
+    "Add veld": "Voeg veld toe",
+    "Add chart": "Voeg grafiek toe",
+    "xField": "X veld",
+    "yField": "Y veld",
+    "seriesField": "Serie veld",
+    "angleField": "Hoek veld",
+    "colorField": "Kleur veld",
+    "Line": "Lijn",
     "Area": "Gebied",
     "Column": "Kolom",
     "Bar": "Bar",
-    "Pie": "Pie",
-    "Dual axes": "Dual axes",
+    "Pie": "Taart",
+    "Dual axes": "Dubbele assen",
     "Scatter": "Scatter",
     "Gauge": "Gauge",
-    "Statistic": "Statistic",
-    "Currency": "Currency",
+    "Statistic": "Statistiek",
+    "Currency": "Munteenheid",
     "Percent": "Percentage",
     "Exponential": "Exponential",
-    "Abbreviation": "Abbreviation",
-    "Please configure and run query": "Please configure and run query",
-    "Please configure chart": "Please configure chart",
-    "Are you sure to cancel?": "Are you sure to cancel?",
-    "You changes are not saved. If you click OK, your changes will be lost.": "You changes are not saved. If you click OK, your changes will be lost.",
-    "Same properties set in the form above will be overwritten by this JSON config.": "Same properties set in the form above will be overwritten by this JSON config.",
+    "Abbreviation": "Afkorting",
+    "Please configure and run query": "Configureer en voer de query uit",
+    "Please configure chart": "Configureer grafiek",
+    "Are you sure to cancel?": "Ben je zeker dat je wil annuleren?",
+    "You changes are not saved. If you click OK, your changes will be lost.": "Je wijzigingen worden niet opgeslagen. Als je op OK klikt, gaan je wijzigingen verloren.",
+    "Same properties set in the form above will be overwritten by this JSON config.": "Sommige eigenschappen die in het bovenstaande formulier zijn ingesteld, worden overschreven door deze JSON-configuratie.",
     "Built-in": "Ingebouwd",
-    "Config reference: ": "Config reference: ",
+    "Config reference: ": "Configuratie referentie: ",
     "Table": "Tabel",
-    "Sum": "Sum",
-    "Avg": "Avg",
-    "Count": "Count",
+    "Sum": "Som",
+    "Avg": "Gem",
+    "Count": "Aantal",
     "Min": "Min",
     "Max": "Max",
-    "Please select a chart type.": "Please select a chart type.",
+    "Please select a chart type.": "Kies een grafiektype.",
     "Collection": "Collectie",
-    "isStack": "isStack",
-    "isPercent": "isPercent",
-    "isGroup": "isGroup",
-    "smooth": "smooth",
-    "Expand": "Expand",
-    "Current filter": "Current filter",
-    "Add custom field": "Add custom field",
-    "To filter with custom fields, use \"Current filter\" variables in the chart configuration.": "To filter with custom fields, use \"Current filter\" variables in the chart configuration.",
-    "Input": "Input",
-    "Date range": "Date range",
-    "Time range": "Time range",
-    "Edit field properties": "Edit field properties",
-    "Select a source field to use metadata of the field": "Select a source field to use metadata of the field",
-    "Original field": "Original field",
-    "Transformation": "Transformation",
-    "Add transformation": "Add transformation",
+    "isStack": "isStapel",
+    "isPercent": "isPercentage",
+    "isGroup": "isGroep",
+    "smooth": "glad",
+    "Expand": "Uitbreiden",
+    "Current filter": "Huidige filter",
+    "Add custom veld": "Aangepast veld toevoegen",
+    "To filter with custom fields, use \"Current filter\" variables in the chart configuration.": "Als je wil filteren met aangepaste velden, gebruik je de variabelen \"Current filter\" in de grafiekconfiguratie.",
+    "Input": "Invoer",
+    "Date range": "Datumbereik",
+    "Time range": "Tijdsbereik",
+    "Edit veld properties": "Bewerk veld eigenschappen",
+    "Select a source veld to use metadata of the veld": "Selecteer een bronveld om metagegevens van het veld te gebruiken",
+    "Original veld": "Origineel veld",
+    "Transformation": "Transformatie",
+    "Add transformation": "Transformatie toevoegen",
     "Container": "Container",
-    "Show border": "Show border",
-    "Transformation tip": "Fields allow multiple transformations, applied sequentially. Pay attention to data type changes after each transformation. Drag-and-drop functionality enables adjustment of transformation order.",
-    "Type conversion": "Type conversion",
-    "Transformer": "Transformer",
+    "Show border": "Toon rand",
+    "Transformation tip": "Velden staan ​​meerdere transformaties toe, die sequentieel worden toegepast. Let op wijzigingen in het gegevenstype na elke transformatie. Drag-and-drop-functionaliteit maakt aanpassing van de transformatievolgorde mogelijk.",
+    "Type conversion": "Type conversie",
+    "Transformer": "Transformeer",
     "Size": "Grootte",
-    "Width": "Width",
-    "Height": "Height",
+    "Width": "Breedte",
+    "Height": "Hoogte",
     "Aspect ratio": "Aspect ratio",
-    "Fixed height": "Fixed height",
-    "Show background": "Show background",
-    "Show padding": "Show padding",
-    "Distinct": "Distinct",
-    "Auto refresh": "Auto refresh"
+    "Fixed height": "Vaste hoogte",
+    "Show background": "Toon achtergrond",
+    "Show padding": "Toon opvulling",
+    "Distinct": "Onderscheiden",
+    "Auto refresh": "Auto vernieuwing"
 }
