--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/nl-NL.json
@@ -1,33 +1,33 @@
 {
     "Vditor": "Markdown(Vditor)",
-    "File collection": "File collection",
-    "Used to store files uploaded in the Markdown editor": "Used to store files uploaded in the Markdown editor",
-    "Toolbar": "Editor toolbar configuration",
+    "File collection": "Bestandencollectie",
+    "Used to store files uploaded in the Markdown editor": "Wordt gebruikt om bestanden op te slaan die zijn geüpload in de Markdown-editor",
+    "Toolbar": "Werkbalk configuratie",
     "Emoji": "Emoji",
-    "Headings": "Headings",
-    "Bold": "Bold",
-    "Italic": "Italic",
-    "Strike": "Strike",
-    "Record": "Start Record/End Record",
-    "Line": "Line",
-    "Quote": "Quote",
+    "Headings": "Koppen",
+    "Bold": "Vet",
+    "Italic": "Cursief",
+    "Strike": "Doorhalen",
+    "Record": "Start opnemen/Einde opname",
+    "Line": "Lijn",
+    "Quote": "Citaat",
     "List": "Lijst",
-    "OrderedList": "Order List",
-    "Check": "Task List",
-    "Outdent": "Outdent",
-    "Indent": "Indent",
-    "Code": "Code Block",
-    "InlineCode": "Inline Code",
-    "InsertAfter": "Insert Line After",
-    "InsertBefore": "Insert Line Before",
-    "Undo": "Undo",
-    "Redo": "Redo",
-    "Upload": "Upload image or file",
+    "OrderedList": "Geordende lijst",
+    "Check": "Takenlijst",
+    "Outdent": "Uitvullen",
+    "Indent": "Invullen",
+    "Code": "Codeblok",
+    "InlineCode": "Inlinecode",
+    "InsertAfter": "Invoegen na",
+    "InsertBefore": "Invoegen voor",
+    "Undo": "Ongedaan maken",
+    "Redo": "Opnieuw uitvoeren",
+    "Upload": "Afbeelding of bestand uploaden",
     "Link": "Link",
     "Table": "Tabel",
-    "EditMode": "Edit Mode",
-    "Both": "Editor & Preview",
+    "EditMode": "Bewerkmodus",
+    "Both": "Editor & Voorbeeld",
     "Preview": "Voorbeeld",
-    "Fullscreen": "Toggle Fullscreen",
-    "Outline": "Outline"
+    "Fullscreen": "Toggle volledig scherm",
+    "Outline": "Overzicht"
 }
