--- a/packages/plugins/@nocobase/plugin-gantt/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-gantt/src/locale/nl-NL.json
@@ -1,5 +1,5 @@
 {
-    "Title field": "Titelfeld",
+    "Title field": "Titelveld",
     "Time scale": "Tijdschaal",
     "Start date field": "Begindatumveld",
     "Progress field": "Voortgangsveld"
