--- a/packages/plugins/@nocobase/plugin-action-export/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-action-export/src/locale/nl-NL.json
@@ -1,6 +1,6 @@
 {
-    "Export warning": "You can export up to {{limit}} rows of data at a time, any excess will be ignored.",
-    "Start export": "Start export",
-    "True": "True",
-    "False": "False"
+    "Export warning": "Je kunt maximaal {{limit}} rijen gegevens tegelijk exporteren, eventuele overschrijdingen worden genegeerd.",
+    "Start export": "Start exporteren",
+    "True": "Waar",
+    "False": "Onwaar"
 }
