--- a/packages/plugins/@nocobase/plugin-action-import/src/server/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-action-import/src/server/locale/nl-NL.json
@@ -1,10 +1,10 @@
 {
     "Yes": "Ja",
     "No": "Nee",
-    "can not find value": "can not find value",
-    "password is empty": "password is empty",
-    "Incorrect time format": "Incorrect time format",
-    "Incorrect date format": "Incorrect date format",
-    "Incorrect email format": "Incorrect email format",
-    "Illegal percentage format": "Illegal percentage format"
+    "can not find value": "Kan waarde niet vinden",
+    "password is empty": "Wachtwoord is leeg",
+    "Incorrect time format": "Onjuist tijdformaat",
+    "Incorrect date format": "Onjuist datumformaat",
+    "Incorrect email format": "Onjuist e-mailformaat",
+    "Illegal percentage format": "Ongeldig percentageformaat"
 }
