--- a/packages/plugins/@nocobase/plugin-api-keys/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-api-keys/src/locale/nl-NL.json
@@ -1,21 +1,21 @@
 {
-    "API keys": "API keys",
-    "API key created successfully": "API key created successfully",
-    "Make sure to copy your personal access key now as you will not be able to see this again.": "Make sure to copy your personal access key now as you will not be able to see this again.",
-    "Key name": "Key name",
-    "Expiration": "Expiration",
-    "Delete API key": "Delete API key",
-    "Role": "Role",
-    "Keys manager": "Keys manager",
+    "API keys": "API-sleutels",
+    "API key created successfully": "API-sleutel succesvol aangemaakt",
+    "Make sure to copy your personal access key now as you will not be able to see this again.": "Zorg ervoor dat je nu je persoonlijke toegangssleutel kopieert, want je kan deze later niet meer opnieuw zien.",
+    "Key name": "Sleutelnaam",
+    "Expiration": "Vervaldatum",
+    "Delete API key": "API key verwijderen",
+    "Role": "Rol",
+    "Keys manager": "Sleutelbeheerder",
     "Created at": "Aangemaakt op",
-    "Add API key": "Add API key",
-    "Never": "Never",
+    "Add API key": "API key toevoegen",
+    "Never": "Nooit",
     "Custom": "Aangepast",
-    "Never expires": "Never expires",
-    "1 Day": "1 Day",
-    "7 Days": "7 Days",
-    "30 Days": "30 Days",
-    "90 Days": "90 Days",
-    "Role not found": "Role not found",
-    "Allow only your own roles to be selected": "Allow only your own roles to be selected"
+    "Never expires": "Verloopt nooit",
+    "1 Day": "1 dag",
+    "7 Days": "7 dagen",
+    "30 Days": "30 dagen",
+    "90 Days": "90 dagen",
+    "Role not found": "Rol niet gevonden",
+    "Allow only your own roles to be selected": "Alleen je eigen rollen mogen worden geselecteerd"
 }
