--- a/packages/plugins/@nocobase/plugin-auth/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/nl-NL.json
@@ -1,33 +1,33 @@
 {
-    "Auth Type": "Auth Type",
+    "Auth Type": "Authenticatietype",
     "Authenticators": "Authenticators",
-    "Authentication": "Authentication",
-    "Sign in via email": "Sign in via email",
-    "Sign in via password": "Sign in via password",
-    "Not allowed to sign up": "Not allowed to sign up",
-    "Allow to sign up": "Allow to sign up",
-    "The username or email is incorrect, please re-enter": "The username or email is incorrect, please re-enter",
-    "The password is incorrect, please re-enter": "The password is incorrect, please re-enter",
-    "Not a valid cellphone number, please re-enter": "Not a valid cellphone number, please re-enter",
-    "The phone number has been registered, please login directly": "The phone number has been registered, please login directly",
-    "The phone number is not registered, please register first": "The phone number is not registered, please register first",
-    "Please keep and enable at least one authenticator": "Please keep and enable at least one authenticator",
-    "Allow to sign in with": "Allow to sign in with",
-    "Please enter a valid username": "Please enter a valid username",
-    "Please enter a valid email": "Please enter a valid email",
-    "Please enter your username or email": "Please enter your username or email",
-    "Please enter a password": "Please enter a password",
-    "Username/Email": "Username/Email",
+    "Authentication": "Authenticatie",
+    "Sign in via email": "Inloggen via e-mail",
+    "Sign in via password": "Inloggen via wachtwoord",
+    "Not allowed to sign up": "Aanmelden is niet toegestaan",
+    "Allow to sign up": "Toestaan om je aan te melden",
+    "The username or email is incorrect, please re-enter": "De gebruikersnaam of e-mail is incorrect, probeer het opnieuw",
+    "The password is incorrect, please re-enter": "Het wachtwoord is incorrect, probeer het opnieuw",
+    "Not a valid cellphone number, please re-enter": "Geen geldig telefoonnummer, probeer opnieuw in te voeren",
+    "The phone number has been registered, please login directly": "Het telefoonnummer is al geregistreerd, log direct in",
+    "The phone number is not registered, please register first": "Het telefoonnummer is niet geregistreerd, registreer eerst",
+    "Please keep and enable at least one authenticator": "Houd minstens één authenticator ingeschakeld",
+    "Allow to sign in with": "Toestaan om in te loggen met",
+    "Please enter a valid username": "Voer een geldige gebruikersnaam in",
+    "Please enter a valid email": "Voer een geldig e-mailadres in",
+    "Please enter your username or email": "Voer je gebruikersnaam of e-mailadres in",
+    "Please enter a password": "Voer een wachtwoord in",
+    "Username/Email": "Gebruikersnaam/E-mail",
     "Auth UID": "Auth UID",
-    "The authentication allows users to sign in via username or email.": "The authentication allows users to sign in via username or email.",
-    "No authentication methods available.": "No authentication methods available.",
-    "The password is inconsistent, please re-enter": "The password is inconsistent, please re-enter",
-    "Sign-in": "Sign-in",
+    "The authentication allows users to sign in via username or email.": "De authenticatie staat gebruikers toe in te loggen via gebruikersnaam of e-mail.",
+    "No authentication methods available.": "Geen authenticatiemethoden beschikbaar.",
+    "The password is inconsistent, please re-enter": "Het wachtwoord is inconsistent, probeer het opnieuw",
+    "Sign-in": "Inloggen",
     "Password": "Wachtwoord",
-    "The username/email or password is incorrect, please re-enter": "The username/email or password is incorrect, please re-enter",
-    "Show": "Show",
-    "Sign up settings": "Sign up settings",
-    "Sign up form": "Sign up form",
-    "At least one of the username or email fields is required": "At least one of the username or email fields is required",
-    "Password is not allowed to be changed": "Password is not allowed to be changed"
+    "The username/email or password is incorrect, please re-enter": "De gebruikersnaam/e-mail of het wachtwoord is incorrect, probeer het opnieuw",
+    "Show": "Toon",
+    "Sign up settings": "Aanmeldinstellingen",
+    "Sign up form": "Aanmeldformulier",
+    "At least one of the username or email fields is required": "Ten minste één van de velden voor gebruikersnaam of e-mail is verplicht",
+    "Password is not allowed to be changed": "Wachtwoord mag niet worden gewijzigd"
 }
