--- a/packages/plugins/@nocobase/plugin-charts/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-charts/src/locale/nl-NL.json
@@ -5,18 +5,18 @@
     "Submit": "Indienen",
     "Actions": "Acties",
     "Title": "Titel",
-    "Enable": "Enable",
-    "SAML manager": "SAML manager",
-    "SAML Providers": "SAML Providers",
-    "Redirect url": "Redirect url",
+    "Enable": "Inschakelen",
+    "SAML manager": "SAML beheerder",
+    "SAML Providers": "SAML aanbieders",
+    "Redirect url": "Omleidings-URL",
     "SP entity id": "SP entity id",
-    "Add provider": "Toevoegen",
-    "Edit provider": "Bewerken",
+    "Add provider": "Aanbieder toevoegen",
+    "Edit provider": "Aanbieder bewerken",
     "Client id": "Client id",
-    "Entity id or issuer": "Entity id or issuer",
-    "Login Url": "Login Url",
-    "Public cert": "Public cert",
-    "Delete provider": "Verwijder",
-    "Are you sure you want to delete it?": "Weet je zeker dat je het wilt verwijderen?",
-    "Sign in button name, which will be displayed on the sign in page": "Sign in button name, which will be displayed on the sign in page"
+    "Entity id or issuer": "Entity id of issuer",
+    "Login Url": "Login URL",
+    "Public cert": "Publiek certificaat",
+    "Delete provider": "Aanbieder verwijderen",
+    "Are you sure you want to delete it?": "Weet je zeker dat je het wil verwijderen?",
+    "Sign in button name, which will be displayed on the sign in page": "Aanmeldknopnaam, die wordt weergegeven op de aanmeldpagina"
 }
