--- a/packages/plugins/@nocobase/plugin-data-source-main/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-data-source-main/src/locale/nl-NL.json
@@ -1,4 +1,4 @@
 {
-    "field-name-exists": "Field name \"{{name}}\" already exists in collection \"{{collectionName}}\"",
-    "field-is-depended-on-by-other": "Can not delete field \"{{fieldName}}\" in \"{{fieldCollectionName}}\", it is used by field \"{{dependedFieldName}}\" in \"{{dependedFieldCollectionName}}\" as \"{{dependedFieldAs}}\""
+    "field-name-exists": "De veldnaam \"{{name}}\" bestaat al in de collectie \"{{collectionName}}\"",
+    "field-is-depended-on-by-other": "Kan de veldnaam \"{{fieldName}}\" niet verwijderen in \"{{fieldCollectionName}}\", het wordt gebruikt door het veld \"{{dependedFieldName}}\" in \"{{dependedFieldCollectionName}}\" als \"{{dependedFieldAs}}\""
 }
