--- a/packages/plugins/@nocobase/plugin-error-handler/src/server/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-error-handler/src/server/locale/nl-NL.json
@@ -1,6 +1,6 @@
 {
-    "unique violation": "{{field}} must be unique",
-    "notNull violation": "notNull violation",
-    "Validation error": "{{field}} validation error",
-    "notNull Violation": "{{field}} cannot be null"
+    "unique violation": "{{field}} moet uniek zijn",
+    "notNull violation": "notNull schending",
+    "Validation error": "{{field}} validatiefout",
+    "notNull Violation": "{{field}} mag niet leeg zijn"
 }
