--- a/packages/plugins/@nocobase/plugin-file-manager/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-file-manager/src/locale/nl-NL.json
@@ -1,22 +1,22 @@
 {
     "File manager": "Bestandsbeheer",
-    "Attachment": "Attachment",
-    "MIME type": "MIME type",
-    "Storage display name": "Storage display name",
-    "Storage name": "Storage name",
-    "Storage type": "Storage type",
-    "Default storage": "Default storage",
-    "Storage base URL": "Storage base URL",
-    "Destination": "Destination",
-    "Use the built-in static file server": "Use the built-in static file server",
-    "Local storage": "Local storage",
+    "Attachment": "Bijlage",
+    "MIME type": "MIME-type",
+    "Storage display name": "Weergavenaam van opslag",
+    "Storage name": "Opslagnaam",
+    "Storage type": "Opslagtype",
+    "Default storage": "Standaardopslag",
+    "Storage base URL": "Opslag basis-URL",
+    "Destination": "Bestemming",
+    "Use the built-in static file server": "Gebruik de ingebouwde statische bestandsserver",
+    "Local storage": "Lokale opslag",
     "Aliyun OSS": "Aliyun OSS",
     "Tencent COS": "Tencent COS",
     "Amazon S3": "Amazon S3",
-    "Region": "Region",
+    "Region": "Regio",
     "Bucket": "Bucket",
-    "Path": "Path",
-    "Filename": "Filename",
-    "See more": "See more",
-    "Will be used for API": "Will be used for API"
+    "Path": "Pad",
+    "Filename": "Bestandsnaam",
+    "See more": "Bekijk meer",
+    "Will be used for API": "Wordt gebruikt voor API"
 }
