--- a/packages/plugins/@nocobase/plugin-graph-collection-manager/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-graph-collection-manager/src/locale/nl-NL.json
@@ -1,15 +1,15 @@
 {
-    "Graph Collection": "Graph Collection",
-    "Collection List": "Collection List",
-    "Full Screen": "Full Screen",
-    "Collection Search": "Collection Search",
-    "Create Collection": "Create Collection",
-    "All Fields": "All Fields",
-    "Association Fields": "Association Fields",
+    "Graph Collection": "Grafiekcollectie",
+    "Collection List": "Collectielijst",
+    "Full Screen": "Volledig scherm",
+    "Collection Search": "Collectie zoekopdracht",
+    "Create Collection": "Collectie maken",
+    "All Fields": "Alle velden",
+    "Association Fields": "Associatievelden",
     "Choices fields": "Keuzevelden",
-    "All relationships": "All relationships",
-    "Entity relationship only": "Entity relationship only",
-    "Inheritance relationship only": "Inheritance relationship only",
-    "Graphical interface": "Graphical interface",
-    "Selection": "Selection"
+    "All relationships": "Alle relaties",
+    "Entity relationship only": "Alleen entiteitsrelaties",
+    "Inheritance relationship only": "Alleen erfelijkheidsrelaties",
+    "Graphical interface": "Grafische interface",
+    "Selection": "Selectie"
 }
