--- a/packages/plugins/@nocobase/plugin-localization/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-localization/src/locale/nl-NL.json
@@ -1,24 +1,24 @@
 {
     "Edit": "Bewerken",
     "Add new": "Nieuwe toevoegen",
-    "Localization management": "Localization management",
-    "No data": "No data",
-    "Delete text": "Delete text",
-    "Delete translation": "Delete translation",
+    "Localization management": "Lokalisatiebeheer",
+    "No data": "Geen data",
+    "Delete text": "Tekst verwijderen",
+    "Delete translation": "Vertaling verwijderen",
     "Module": "Module",
-    "Text": "Text",
-    "Translation": "Translation",
-    "Sync": "Sync",
-    "Current language": "Current language",
-    "Keyword": "Keyword",
+    "Text": "Tekst",
+    "Translation": "Vertaling",
+    "Sync": "Synchroniseer",
+    "Current language": "Huidige taal",
+    "Keyword": "Kernwoord",
     "All": "Alles",
-    "No translation": "No translation",
-    "System & Plugins": "System & Plugins",
-    "User interfaces": "User interfaces",
+    "No translation": "Geen vertaling",
+    "System & Plugins": "Systeem & Plugins",
+    "User interfaces": "Gebruikersinterfaces",
     "Collections & Fields": "Collecties & Velden",
-    "Please select the resources you want to synchronize": "Please select the resources you want to synchronize",
+    "Please select the resources you want to synchronize": "Selecteer de bronnen die je wil synchroniseren",
     "Menu": "Menu",
-    "Publish": "Publish",
-    "Translations": "Translations",
-    "Localization": "Localization"
+    "Publish": "Publiceer",
+    "Translations": "Vertalingen",
+    "Localization": "Lokalisatie"
 }
