--- a/packages/plugins/@nocobase/plugin-multi-app-manager/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-multi-app-manager/src/locale/nl-NL.json
@@ -1,11 +1,11 @@
 {
-    "Multi-app manager": "Multi-app manager",
-    "Applications": "Applications",
-    "App display name": "App display name",
+    "Multi-app manager": "Multi-app beheerder",
+    "Applications": "Applicaties",
+    "App display name": "App weergavenaam",
     "App ID": "App ID",
-    "Pin to menu": "Pin to menu",
-    "Custom domain": "Custom domain",
-    "Manage applications": "Manage applications",
-    "Standalone deployment": "Standalone deployment",
-    "Auto start": "Auto start"
+    "Pin to menu": "Vastmaken aan menu",
+    "Custom domain": "Aangepast domein",
+    "Manage applications": "Beheer applicaties",
+    "Standalone deployment": "Zelfstandige implementatie",
+    "Auto start": "Automatisch starten"
 }
