--- a/packages/plugins/@nocobase/plugin-multi-app-share-collection/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-multi-app-share-collection/src/locale/nl-NL.json
@@ -1,11 +1,11 @@
 {
-    "Share collections": "Share collections",
-    "Unshared collections": "Unshared collections",
-    "Shared collections": "Shared collections",
-    "All categories": "All categories",
-    "Enter name or title...": "Enter name or title...",
-    "Are you sure to add the following collections?": "Are you sure to add the following collections?",
-    "Are you sure to remove the following collections?": "Are you sure to remove the following collections?",
+    "Share collections": "Deel collecties",
+    "Unshared collections": "Niet-gedeelde collecties",
+    "Shared collections": "Gedeelde collecties",
+    "All categories": "Alle categorieën",
+    "Enter name or title...": "Voeg een naam of titel toe...",
+    "Are you sure to add the following collections?": "Weet je zeker dat je de volgende collecties wil toevoegen?",
+    "Are you sure to remove the following collections?": "Weet je zeker dat je de volgende collecties wil verwijderen?",
     "Collection display name": "Weergavenaam collectie",
     "Collection name": "Naam collectie",
     "Collection category": "Collectie categorie"
