--- a/packages/plugins/@nocobase/plugin-notification-in-app-message/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-notification-in-app-message/src/locale/nl-NL.json
@@ -1,28 +1,28 @@
 {
     "Inbox": "Inbox",
-    "Message": "Message",
-    "Loading": "Loading",
-    "Loading more": "Loading more",
-    "No more": "No more",
-    "Loading failed,": "Loading failed,",
-    "please reload": "please reload",
+    "Message": "Bericht",
+    "Loading": "Laden",
+    "Loading more": "Meer laden",
+    "No more": "Geen meer",
+    "Loading failed,": "Laden mislukt,",
+    "please reload": "vernieuw",
     "Detail": "Detail",
-    "Content": "Content",
+    "Content": "Inhoud",
     "Datetime": "Datumtijd",
     "Status": "Status",
     "All": "Alles",
-    "Read": "Read",
-    "Unread": "Unread",
-    "In-app message": "In-app message",
-    "Receivers": "Receivers",
-    "Channel name": "Channel name",
-    "Message group name": "Message group name",
-    "Message title": "Message title",
-    "Message content": "Message content",
-    "Details page for desktop": "Details page for desktop",
-    "Support two types of links: internal links and external links. If using an internal link, the link starts with\"/\", for example, \"/admin\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".": "Support two types of links: internal links and external links. If using an internal link, the link starts with \"/\", for example, \"/admin\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".",
-    "Mark as read": "Mark as read",
-    "Support two types of links: internal links and external links. If using an internal link, the link starts with\"/\", for example, \"/m\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".": "Support two types of links: internal links and external links. If using an internal link, the link starts with \"/\", for example, \"/m\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".",
-    "Details page for mobile": "Details page for mobile",
-    "The message page has already been created.": "The message page has already been created."
+    "Read": "Gelezen",
+    "Unread": "Ongelezen",
+    "In-app message": "In-app bericht",
+    "Receivers": "Ontvangers",
+    "Channel name": "Kanaalnaam",
+    "Message group name": "Bericht groepsnaam",
+    "Message title": "Berichttitel",
+    "Message content": "Berichtinhoud",
+    "Details page for desktop": "Detailpagina voor desktop",
+    "Support two types of links: internal links and external links. If using an internal link, the link starts with \"/\", for example, \"/admin\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".": "Ondersteunt twee soorten links: interne links en externe links. Bij gebruik van een interne link begint de link met \"/\", bijvoorbeeld \"/admin\". Bij gebruik van een externe link begint de link met \"http\", bijvoorbeeld \"https://voorbeeld.com\".",
+    "Mark as read": "Markeer als gelezen",
+    "Support two types of links: internal links and external links. If using an internal link, the link starts with \"/\", for example, \"/m\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".": "Ondersteunt twee soorten links: interne links en externe links. Bij gebruik van een interne link begint de link met \"/\", bijvoorbeeld \"/m\". Bij gebruik van een externe link begint de link met \"http\", bijvoorbeeld \"https://voorbeeld.com\".",
+    "Details page for mobile": "Detailpagina voor mobiel",
+    "The message page has already been created.": "De berichtenpagina is al aangemaakt."
 }
