--- a/packages/plugins/@nocobase/plugin-theme-editor/src/client/antd-token-previewer/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-theme-editor/src/client/antd-token-previewer/locale/nl-NL.json
@@ -1,14 +1,14 @@
 {
-    "_lang": "en-US",
-    "followPrimary": "Follow Brand Color",
+    "_lang": "nl-NL",
+    "followPrimary": "Volg merkkleur",
     "reset": "Resetten",
-    "next": "Next",
-    "groupView": "Group View",
+    "next": "Volgende",
+    "groupView": "Groepsweergave",
     "fill": "Vullen",
-    "border": "Border",
-    "background": "Background",
-    "text": "Text",
-    "overview": "Overview",
-    "components": "Components",
-    "relatedTokens": "Related Tokens"
+    "border": "Rand",
+    "background": "Achtergrond",
+    "text": "Tekst",
+    "overview": "Overzicht",
+    "components": "Componenten",
+    "relatedTokens": "Gerelateerde tokens"
 }
