--- a/packages/plugins/@nocobase/plugin-theme-editor/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-theme-editor/src/locale/nl-NL.json
@@ -1,22 +1,22 @@
 {
-    "Theme": "Theme",
+    "Theme": "Thema",
     "Local": "Lokaal",
-    "Dark theme": "Dark theme",
-    "Optional": "Optional",
-    "Non-optional": "Non-optional",
-    "Current": "Current",
+    "Dark theme": "Donker thema",
+    "Optional": "Optioneel",
+    "Non-optional": "Niet-optioneel",
+    "Current": "Huidige",
     "Default": "Standaard",
-    "Theme Editor": "Theme Editor",
+    "Theme Editor": "Themabewerker",
     "Save": "Opslaan",
     "Close": "Sluiten",
     "Edit": "Bewerken",
     "Export": "Exporteer",
-    "edit Theme Config": "edit Theme Config",
-    "The theme of the JSON format is incorrect": "The theme of the JSON format is incorrect",
-    "Edited successfully": "Edited successfully",
+    "edit Theme Config": "Themaconfiguratie bewerken",
+    "The theme of the JSON format is incorrect": "Het thema van het JSON-formaat is onjuist",
+    "Edited successfully": "Succesvol bewerkt",
     "Saved successfully": "Succesvol opgeslagen",
-    "Initializing Editor...": "Initializing Editor...",
-    "Save theme": "Save theme",
-    "Please set a name for this theme": "Please set a name for this theme",
-    "Please input the theme name": "Please input the theme name"
+    "Initializing Editor...": "Bewerker initialiseren...",
+    "Save theme": "Bewaar thema",
+    "Please set a name for this theme": "Stel een naam in voor dit thema",
+    "Please input the theme name": "Voer de themanaam in"
 }
