--- a/packages/plugins/@nocobase/plugin-users/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-users/src/locale/nl-NL.json
@@ -1,8 +1,8 @@
 {
-    "Users & Permissions": "Users & Permissions",
-    "Add users": "Add users",
-    "Remove user": "Remove user",
-    "Are you sure you want to remove it?": "Are you sure you want to remove it?",
-    "Random password": "Random password",
-    "User profile is not allowed to be edited": "User profile is not allowed to be edited"
+    "Users & Permissions": "Gebruikers & Toegangen",
+    "Add users": "Gebruiker toevoegen",
+    "Remove user": "Gebruiker verwijderen",
+    "Are you sure you want to remove it?": "Ben je zeker dat je het wil verwijderen?",
+    "Random password": "Willekeurig wachtwoord",
+    "User profile is not allowed to be edited": "Het gebruikersprofiel mag niet bewerkt worden."
 }
