--- a/packages/plugins/@nocobase/plugin-users/src/server/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-users/src/server/locale/nl-NL.json
@@ -1,8 +1,8 @@
 {
-    "The email is incorrect, please re-enter": "The email is incorrect, please re-enter",
-    "Please fill in your email address": "Please fill in your email address",
-    "The password is incorrect, please re-enter": "The password is incorrect, please re-enter",
-    "Not a valid cellphone number, please re-enter": "Not a valid cellphone number, please re-enter",
-    "The phone number has been registered, please login directly": "The phone number has been registered, please login directly",
-    "The phone number is not registered, please register first": "The phone number is not registered, please register first"
+    "The email is incorrect, please re-enter": "Het e-mailadres is incorrect, probeer het opnieuw",
+    "Please fill in your email address": "Vul je e-mailadres in",
+    "The password is incorrect, please re-enter": "Het wachtwoord is incorrect, probeer het opnieuw",
+    "Not a valid cellphone number, please re-enter": "Geen geldig telefoonnummer, probeer het opnieuw",
+    "The phone number has been registered, please login directly": "Het telefoonnummer is al geregistreerd, log direct in",
+    "The phone number is not registered, please register first": "Het telefoonnummer is niet geregistreerd, registreer eerst"
 }
