--- a/packages/plugins/@nocobase/plugin-verification/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-verification/src/locale/nl-NL.json
@@ -1,22 +1,22 @@
 {
-    "Verification": "Verification",
-    "Verification providers": "Verification providers",
+    "Verification": "Verificatie",
+    "Verification providers": "Verificatieproviders",
     "Provider type": "Provider type",
     "Aliyun SMS": "Aliyun SMS",
     "Access Key ID": "Access Key ID",
     "Access Key Secret": "Access Key Secret",
     "Endpoint": "Endpoint",
-    "Sign": "Sign",
-    "Template code": "Template code",
+    "Sign": "Handtekening",
+    "Template code": "Sjablooncode",
     "Secret Id": "Secret Id",
     "Secret Key": "Secret Key",
-    "Region": "Region",
-    "Sign name": "Sign name",
+    "Region": "Regio",
+    "Sign name": "Handtekening naam",
     "Sms sdk app id": "Sms sdk app id",
-    "Template Id": "Template Id",
-    "Verification send failed, please try later or contact to administrator": "Verification send failed, please try later or contact to administrator",
-    "Not a valid cellphone number, please re-enter": "Not a valid cellphone number, please re-enter",
-    "Please don't retry in {{time}} seconds": "Please don't retry in {{time}} seconds",
-    "You are trying so frequently, please slow down": "You are trying so frequently, please slow down",
-    "Verification code is invalid": "Verification code is invalid"
+    "Template Id": "Sjabloon Id",
+    "Verification send failed, please try later or contact to administrator": "Verificatie verzenden mislukt, probeer het later opnieuw of neem contact op met de beheerder",
+    "Not a valid cellphone number, please re-enter": "Geen geldig telefoonnummer, probeer opnieuw in te voeren",
+    "Please don't retry in {{time}} seconds": "Probeer niet opnieuw binnen {{time}} seconden",
+    "You are trying so frequently, please slow down": "Je probeert te vaak, probeer langzamer",
+    "Verification code is invalid": "Verificatiecode is ongeldig"
 }
