--- a/packages/plugins/@nocobase/plugin-workflow-action-trigger/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-workflow-action-trigger/src/locale/nl-NL.json
@@ -1,9 +1,9 @@
 {
-    "Form event": "Form event",
-    "Event triggers when submitted a workflow bound form action.": "Event triggers when submitted a workflow bound form action.",
-    "Form data model": "Form data model",
-    "Use a collection to match form data.": "Use a collection to match form data.",
-    "Associations to use": "Associations to use",
-    "User submitted form": "User submitted form",
-    "Role of user submitted form": "Role of user submitted form"
+    "Form event": "Formuliergebeurtenis",
+    "Event triggers when submitted a workflow bound form action.": "De gebeurtenis wordt geactiveerd wanneer een formulieractie die aan een workflow is gekoppeld wordt ingediend.",
+    "Form data model": "Formuliergegevensmodel",
+    "Use a collection to match form data.": "Gebruik een collectie om formuliergegevens te matchen.",
+    "Associations to use": "Associaties om te gebruiken",
+    "User submitted form": "Gebruiker heeft formulier ingediend",
+    "Role of user submitted form": "Rol van de ingediende formuliergebruiker"
 }
