--- a/packages/plugins/@nocobase/plugin-workflow-aggregate/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-workflow-aggregate/src/locale/nl-NL.json
@@ -1,11 +1,13 @@
 {
-    "Aggregate": "Aggregate",
-    "Counting, summing, finding maximum, minimum, and average values for multiple records of a collection or associated data of a record.": "Counting, summing, finding maximum, minimum, and average values for multiple records of a collection or associated data of a record.",
-    "Aggregator function": "Aggregator function",
-    "Target type": "Target type",
-    "Data of collection": "Data of collection",
-    "Data of associated collection": "Data of associated collection",
-    "Field to aggregate": "Field to aggregate",
-    "Distinct": "Distinct",
-    "Query result": "Query result"
+    "Aggregate": "Totaal",
+    "Counting, summing, finding maximum, minimum, and average values for multiple records of a collection or associated data of a record.": "Tellen, optellen, maximum-, minimum- en gemiddelde waarden vinden voor meerdere records van een collectie of geassocieerde gegevens van een record.",
+    "Counting, summing, finding maximum, minimum, and average values for multiple records of a collection or associated data of a record.": "Het tellen, optellen, maximum-, minimum- en gemiddelde waarden berekenen voor meerdere records van een collectie of geassocieerde gegevens van een record.",
+    "Aggregate function": "Aggregatiefunctie",
+    "Counting, summing, finding maximum, minimum, and average values for multiple records of a collection or associated data of a record.": "Het tellen, optellen, maximum-, minimum- en gemiddelde waarden berekenen voor meerdere records van een collectie of geassocieerde gegevens van een record.",
+    "Aggregator function": "Aggregatorfunctie",
+    "Target": "Doel",
+    "Target type": "Doeltype",
+    "Counting, summing, finding maximum, minimum, and average values for multiple records of a collection or associated data of a record.": "Het tellen, optellen, het vinden van maximale, minimale en gemiddelde waarden voor meerdere records van een collectie of geassocieerde gegevens van een record.",
+    "Data of collection or associated record": "Gegevens van collectie of geassocieerd record",
+    "Query result": "Queryresultaat"
 }
