--- a/packages/plugins/@nocobase/plugin-workflow-mailer/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-workflow-mailer/src/locale/nl-NL.json
@@ -1,19 +1,19 @@
 {
-    "Mailer": "Mailer",
-    "Send email. You can use the variables in the upstream nodes as receivers, subject and content of the email.": "Send email by calling SMTP service. You can use the variables in the upstream nodes as receivers, subject and content of the email.",
-    "SMTP host": "Service host",
-    "Port": "Port",
-    "Secure": "Secure",
+    "Mailer": "Verzender",
+    "Send email. You can use the variables in the upstream nodes as receivers, subject and content of the email.": "Stuur e-mail door de SMTP-service aan te roepen. Je kan de variabelen in de stroomopwaartse nodes gebruiken als ontvangers, onderwerp en inhoud van de e-mail.",
+    "SMTP host": "SMTP host",
+    "Port": "Poort",
+    "Secure": "Veilig",
     "User": "Gebruiker",
     "Password": "Wachtwoord",
-    "From": "From",
-    "To": "To",
+    "From": "Van",
+    "To": "Naar",
     "CC": "CC",
     "BCC": "BCC",
-    "Add email address": "Add email address",
-    "Subject": "Subject",
-    "Content": "Content",
-    "Content type": "Content type",
-    "Plain text": "Plain text",
-    "Ignore failed sending and continue workflow": "Ignore failed sending and continue workflow"
+    "Add email address": "E-mailadres toevoegen",
+    "Subject": "Onderwerp",
+    "Content": "Inhoud",
+    "Content type": "Inhoudstype",
+    "Plain text": "Platte tekst",
+    "Ignore failed sending and continue workflow": "Negeer mislukte verzending en ga door met de workflow"
 }
