--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/de-DE.json
@@ -31,5 +31,6 @@
   "Fullscreen": "Vollbild umschalten",
   "Outline": "Gliederung",
   "uploading": "Hochladen...",
-  "upload failed": "Hochladen fehlgeschlagen"
+  "upload failed": "Hochladen fehlgeschlagen",
+  "vditor.uploadError.message": "Dateien können nicht in den aktuellen Speicher hochgeladen werden. Sie versuchen, Dateien in den Markdown-Editor hochzuladen, aber die aktuelle Speicher-Konfiguration unterstützt diese Operation nicht. Um die Upload-Funktionalität zu aktivieren, schließen Sie bitte die folgenden Einstellungen ab: 1. Gehen Sie zu \"Dateimanager\". 2. Wählen Sie den aktuell verwendeten Speicher ({{storageTitle}}) aus. 3. Legen Sie die \"Basis-URL\" fest und aktivieren Sie die Option \"Öffentlicher Zugriff\"."
 }
