--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/it-IT.json
@@ -30,7 +30,7 @@
   "Preview": "Anteprima",
   "Fullscreen": "Attiva/disattiva schermo intero",
   "Outline": "Struttura",
-  "uploading": "uploading",
+  "uploading": "Uploading...",
   "upload failed": "upload failed",
   "vditor.uploadError.message": "Impossibile caricare file nello storage corrente. Stai tentando di caricare file nell'editor Markdown, ma la configurazione di archiviazione corrente non supporta questa operazione. Per abilitare la funzionalità di caricamento, completa le seguenti impostazioni: 1. Vai a \"Gestione file\". 2. Seleziona lo storage attualmente in uso ({{storageTitle}}). 3. Imposta \"URL di base\" e abilita l'opzione \"Accesso pubblico\"."
 }
