--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/ja-JP.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/ja-JP.json
@@ -30,7 +30,7 @@
   "Preview": "プレビュー",
   "Fullscreen": "全画面表示の切り替え",
   "Outline": "アウトライン",
-  "uploading": "uploading",
+  "uploading": "Uploading...",
   "upload failed": "upload failed",
   "vditor.uploadError.message": "現在のストレージにファイルをアップロードできません。Markdownエディタにファイルをアップロードしようとしていますが、現在のストレージ設定ではこの操作はサポートされていません。アップロード機能を有効にするには、次の設定を完了してください：1.「ファイルマネージャー」に移動します。2.現在使用しているストレージ（{{storageTitle}}）を選択します。3.「ベースURL」を設定し、「パブリックアクセス」オプションを有効にします。"
 }
