feat: rename filter to helper

--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -476,6 +476,8 @@
   "Action permissions": "Action permissions",
   "Menu permissions": "Menu permissions",
   "Menu item name": "Menu item name",
+  "Input value": "Input value",
+  "Output value": "Output value",
   "Allow access": "Allow access",
   "Action name": "Action name",
   "Allow action": "Allow action",
