--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/it-IT.json
@@ -1,7 +1,7 @@
  {
   "Vditor": "Markdown(Vditor)",
   "File collection": "Raccolta file",
-  "Used to store files uploaded in the Markdown editor": "Utilizzato per archiviare i file caricati nell'editor Markdown",
+  "Used to store files uploaded in the Markdown editor (default: attachments)": "Utilizzato per archiviare i file caricati nell'editor Markdown (default: attachments)",
   "Toolbar": "Configurazione barra degli strumenti dell'editor",
   "Emoji": "Emoji",
   "Headings": "Intestazioni",
