--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/ko-KR.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/ko-KR.json
@@ -1,7 +1,7 @@
 {
   "Vditor": "Markdown(Vditor)",
   "File collection": "파일 데이터 테이블",
-  "Used to store files uploaded in the Markdown editor": "Markdown 편집기에 업로드된 파일을 저장하는 데 사용됩니다",
+  "Used to store files uploaded in the Markdown editor (default: attachments)": "Markdown 편집기에 업로드된 파일을 저장하는 데 사용됩니다 (default: attachments)",
   "Toolbar": "편집기 도구 모음 구성",
   "Emoji": "이모지",
   "Headings": "제목크기",
