--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/zh-CN.json
@@ -1,7 +1,7 @@
 {
   "Vditor": "Markdown(Vditor)",
   "File collection": "文件数据表",
-  "Used to store files uploaded in the Markdown editor": "用于存储在Markdown编辑器中上传的文件",
+  "Used to store files uploaded in the Markdown editor (default: attachments)": "用于存储在Markdown编辑器中上传的文件 (默认: attachments)",
   "Toolbar": "编辑器工具栏配置",
   "Emoji": "表情",
   "Headings": "标题",
