Updating italian translations - Plugins + Core (#6466)
* Add italian translation

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

The following strings have been intentionally not translated to avoid misinterpretation of the technical terms:

Access Key ID
Access Key Secret
Secret ID
Secret Key

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Create it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* C

--- a/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
@@ -3,7 +3,7 @@
   "Delete": "Elimina",
   "Cancel": "Annulla",
   "Submit": "Invia",
-  "Actions": "Operazioni",
+  "Actions": "Azioni",
   "Title": "Titolo",
   "Enable": "Abilita",
   "Chart": "Grafico",
@@ -76,7 +76,7 @@
   "Expand": "Espandi",
   "Current filter": "Filtro corrente",
   "Add custom field": "Aggiungi campo personalizzato",
-  "To filter with custom fields, use \"Current filter\" variables in the chart configuration.": "Per filtrare con campi personalizzati, utilizza le variabili \"Current filter\" nella configurazione del grafico.",
+  "To filter with custom fields, use \"Current filter\" variables in the chart configuration.": "Per filtrare con campi personalizzati, utilizza le variabili \"Filtro corrente\" nella configurazione del grafico.",
   "Input": "Input",
   "Date range": "Intervallo date",
   "Time range": "Intervallo tempo",
