--- a/packages/core/client/src/locale/pt-BR.json
+++ b/packages/core/client/src/locale/pt-BR.json
@@ -752,6 +752,7 @@
   "Clear default value": "Limpar valor padrão",
   "Open in new window": "Abrir em nova janela",
   "Sorry, the page you visited does not exist.": "Desculpe, a página que você visitou não existe.",
+  "Allow multiple selection": "Permitir seleção múltipla",
   "Parent object": "Objeto pai",
   "Ellipsis overflow content": "Conteúdo de transbordamento com reticências",
   "Hide column": "Ocultar coluna",
