--- a/packages/core/client/src/locale/ru-RU.json
+++ b/packages/core/client/src/locale/ru-RU.json
@@ -581,6 +581,7 @@
   "Clear default value": "Очистить значение по умолчанию",
   "Open in new window": "Открыть в новом окне",
   "Sorry, the page you visited does not exist.": "Извините, посещенной вами страницы не существует.",
+  "Allow multiple selection": "Разрешить множественный выбор",
   "Parent object": "Родительский объект",
   "Ellipsis overflow content": "Содержимое с многоточием при переполнении",
   "Hide column": "Скрыть столбец",
