fix: enhance file upload functionality with improved storage handling and error messages

--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/it-IT.json
@@ -32,5 +32,7 @@
   "Outline": "Struttura",
   "uploading": "Uploading...",
   "upload failed": "upload failed",
-  "vditor.uploadError.message": "Impossibile caricare file nello storage corrente. Stai tentando di caricare file nell'editor Markdown, ma la configurazione di archiviazione corrente non supporta questa operazione. Per abilitare la funzionalità di caricamento, completa le seguenti impostazioni: 1. Vai a \"Gestione file\". 2. Seleziona lo storage attualmente in uso ({{storageTitle}}). 3. Imposta \"URL di base\" e abilita l'opzione \"Accesso pubblico\"."
+  "vditor.uploadError.message": "Impossibile caricare file nello storage corrente. Stai tentando di caricare file nell'editor Markdown, ma la configurazione di archiviazione corrente non supporta questa operazione. Per abilitare la funzionalità di caricamento, completa le seguenti impostazioni: 1. Vai a \"Gestione file\". 2. Seleziona lo storage attualmente in uso ({{storageTitle}}). 3. Imposta \"URL di base\" e abilita l'opzione \"Accesso pubblico\".",
+  "Storage configuration not found. Please configure a storage provider first.": "Configurazione dello storage non trovata. Configura prima un provider di storage.",
+  "Response data is empty": "I dati di risposta sono vuoti"
 }
