--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/ja-JP.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/ja-JP.json
@@ -32,5 +32,7 @@
   "Outline": "アウトライン",
   "uploading": "Uploading...",
   "upload failed": "upload failed",
-  "vditor.uploadError.message": "現在のストレージにファイルをアップロードできません。Markdownエディタにファイルをアップロードしようとしていますが、現在のストレージ設定ではこの操作はサポートされていません。アップロード機能を有効にするには、次の設定を完了してください：1.「ファイルマネージャー」に移動します。2.現在使用しているストレージ（{{storageTitle}}）を選択します。3.「ベースURL」を設定し、「パブリックアクセス」オプションを有効にします。"
+  "vditor.uploadError.message": "現在のストレージにファイルをアップロードできません。Markdownエディタにファイルをアップロードしようとしていますが、現在のストレージ設定ではこの操作はサポートされていません。アップロード機能を有効にするには、次の設定を完了してください：1.「ファイルマネージャー」に移動します。2.現在使用しているストレージ（{{storageTitle}}）を選択します。3.「ベースURL」を設定し、「パブリックアクセス」オプションを有効にします。",
+  "Storage configuration not found. Please configure a storage provider first.": "ストレージ構成が見つかりません。最初にストレージプロバイダーを構成してください。",
+  "Response data is empty": "応答データが空です"
 }
