--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/zh-CN.json
@@ -32,5 +32,7 @@
   "Outline": "大纲",
   "uploading": "上传中...",
   "upload failed": "上传失败",
-  "vditor.uploadError.message": "无法上传文件到当前存储。您正在尝试上传文件到 Markdown 编辑器，但当前的存储配置不支持此操作。要启用上传功能，请完成以下设置：1. 前往「文件管理器」。2. 选择当前正在使用的存储（{{storageTitle}}）。3. 设置「基础 URL」并启用「公开访问」选项。"
+  "vditor.uploadError.message": "无法上传文件到当前存储。您正在尝试上传文件到 Markdown 编辑器，但当前的存储配置不支持此操作。要启用上传功能，请完成以下设置：1. 前往「文件管理器」。2. 选择当前正在使用的存储（{{storageTitle}}）。3. 设置「基础 URL」并启用「公开访问」选项。",
+  "Storage configuration not found. Please configure a storage provider first.": "存储配置未找到。请先配置存储提供程序。",
+  "Response data is empty": "接口返回的数据为空"
 }
